fix config reading

--- a/tests/BizLogic.IntegrationTests/BizLogic.IntegrationTests.csproj
+++ b/tests/BizLogic.IntegrationTests/BizLogic.IntegrationTests.csproj
@@ -4,6 +4,9 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <LangVersion>latest</LangVersion>
     <IsPackable>false</IsPackable>
+    <ApplicationIcon />
+    <OutputType>Library</OutputType>
+    <StartupObject />
   </PropertyGroup>
 
   <ItemGroup>
@@ -18,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="bizlogic.integrationtests.dll.config">
+    <None Update="testhost.dll.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
